--- a/index.html
+++ b/index.html
@@ -4,24 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <div class="header">
         <div class="left">
-
+            Header Logo
         </div>
         <div class="right">
-
+            <ul>
+                <li><a href="www.google.com">header link one</a></li>
+                <li><a href="www.google.com">header link two</a></li>
+                <li><a href="www.google.com">header link three</a></li>
+            </ul>
         </div>
     </div>
 
     <div class = "content1">
         <div class="content1-left">
+            <div class = "awesome">
+                This website is awesome
+            </div>
+            <div class="content1-info">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+            </div>
+            <div class="button">
+                <button>Sign Up</button>
+            </div> 
 
         </div>
         <div class="content1-right">
-            
+            <img src="./images/random.jpeg">
         </div>
     </div> 
 
@@ -30,28 +44,36 @@
 
         </div>
         <div class="info-img">
-
+            <img src="./images/illustration.webp">
+            <img src="./images/illustration.webp">
+            <img src="./images/illustration.webp">
+            <img src="./images/illustration.webp">
         </div>
         <div class="info-info">
-
+            <p>this is some subtext under an illustration of image</p>
+            <p>this is some subtext under an illustration of image</p>
+            <p>this is some subtext under an illustration of image</p>
+            <p>this is some subtext under an illustration of image</p>
         </div>
     </div>
 
     <div class="quote">
-
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor God of Thunder</p>
     </div>
 
     <div class="sign-up">
         <div class="sign-up-info">
-
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <div class="button">
-
+            <button>Sign up</button>
         </div>
     </div>
 
     <div class="footer">
-        
+        Copyright @ The Odin Project 2021
     </div>
 
 </body>
