--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class = "information">
         <div class= "info-head">
-
+            Some random Information
         </div>
         <div class="info-img">
             <img src="./images/illustration.webp">
@@ -58,14 +58,14 @@
     </div>
 
     <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor God of Thunder</p>
+        <p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="credit">-Thor God of Thunder</p>
     </div>
 
     <div class="sign-up">
         <div class="sign-up-info">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div>Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
         </div>
         <div class="button">
             <button>Sign up</button>
