--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <div class="sign-up">
         <div class="sign-up-info">
-            <div>Call to action! It's time!</div>
+            <div class="temp"><strong>Call to action! It's time!</strong></div>
             <div>Sign up for our product by clicking that button right over there!</div>
         </div>
         <div class="button">
